--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "yarn lint --fix",
+    "push" : "git add .; git commit -m 'push to master';"
   },
   "dependencies": {
     "apollo-boost": "^0.4.7",
